--- a/.github/workflows/updatePlugins.yml
+++ b/.github/workflows/updatePlugins.yml
@@ -51,6 +51,7 @@ jobs:
       - run: cp ./plugins.json _tempCDN/plugins.json
 
       - name: Update site
+        if: ${{ steps.plugin_generation.outputs.changes == 'true' }}
         uses: cloudflare/wrangler-action@2.0.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
