--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 /lib
+.DS_Store
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+.vscode/
 node_modules
 /_exports
 /junit.xml
@@ -10,3 +16,17 @@ node_modules
 /sec.config.json
 /nodejs/junit.json
 /nodejs/sec.config.json
+/dotnet/[Dd]ebug/
+/dotnet/[Dd]ebugPublic/
+/dotnet/[Rr]elease/
+/dotnet/[Rr]eleases/
+/dotnet/x64/
+/dotnet/x86/
+/dotnet/bld/
+/dotnet/[Bb]in/
+/dotnet/[Oo]bj/
+/dotnet/[Ll]og/
+/dotnet/project.lock.json
+/dotnet/project.fragment.lock.json
+/dotnet/artifacts/
+/dotnet/**/Properties/launchSettings.json
