--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -158,6 +158,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
+          cache-dependency-path: documentation/package-lock.json
 
       - run: npm ci
         working-directory: documentation/
