--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -134,8 +134,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          context: .
-          file: ./nodejs/Dockerfile
+          context: ./nodejs
+          file: ./Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
           push: true
           tags: |
