--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -136,7 +136,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./nodejs/
-          file: ./Dockerfile
+          file: ./nodejs/Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
           push: true
           tags: |
