--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -113,7 +113,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: published-package
-          working-directory: nodejs
+          path: ./nodejs
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
