--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -108,6 +108,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: published-package
+          path: ./nodejs
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
@@ -129,7 +130,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          context: ./nodejs
+          context: ./nodejs/
           file: ./nodejs/Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
           push: true
