Bugfix for mapped plugin names.
They were not passed through on plugin creation causing mapped plugins (where plugin name != active plugin name to have a blank config

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ node_modules
 /sec.config.json
 /nodejs/junit.json
 /nodejs/sec.config.json
+/nodejs/node_modules
+/nodejs/.nyc_output
+/nodejs/lib
 /dotnet/[Dd]ebug/
 /dotnet/[Dd]ebugPublic/
 /dotnet/[Rr]elease/
