--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -38,4 +38,4 @@ RUN chmod -R 650 /home/bsb
 RUN chown node:node /home/bsb/sec.config.json
 
 ENTRYPOINT [ "/root/entrypoint.sh" ]
-CMD npm start
+CMD ts-node node_modules/@bettercorp/service-base/lib/cli.js
