--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -140,7 +140,7 @@ jobs:
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
           push: true
           tags: |
-            betterweb/service-base:ea-latest-node
+            betterweb/service-base:ea-node
             betterweb/service-base:node-${{ needs.build_and_publish_ea_nodejs.outputs.version }}
 
   docs_build_ea:
