--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -11,6 +11,7 @@ ENV BSB_CONTAINER true
 ENV BSB_PLUGIN_DIR /mnt/bsb-plugins
 
 # NPM repo defaults
+RUN pnpm config set auto-install-peers true
 RUN npm init -y
 RUN echo '{"deploymentProfiles":{"default":{}},"plugins":{}}' >> ./sec.config.json
 # RUN pushd /mnt/bsb-plugins && npm init -y && pushd
