--- a/nodejs/tsconfig.json
+++ b/nodejs/tsconfig.json
@@ -36,6 +36,7 @@
   "exclude": [
     "node_modules/**",
     "src/plugins/*-test*/**/*.*",
-    "src/plugins/-*/**/*.*"
+    "src/plugins/-*/**/*.*",
+    "src/plugins/service-*/**/*.*"
   ]
 }
