Forgot to add file for new build lib

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -25,6 +25,7 @@
     "development/**/*",
     "tsconfig.json",
     "postinstall.js",
+    "build-lib-clients.js",
     "README.md"
   ],
   "main": "lib/index.js",
