--- a/.gitignore
+++ b/.gitignore
@@ -14,11 +14,14 @@ node_modules
 /coverage
 /junit.json
 /sec.config.json
+/sec.config.yaml
 /nodejs/junit.json
 /nodejs/sec.config.json
+/nodejs/sec.config.yaml
 /nodejs/node_modules
 /nodejs/.nyc_output
 /nodejs/lib
+/nodejs/coverage
 /dotnet/[Dd]ebug/
 /dotnet/[Dd]ebugPublic/
 /dotnet/[Rr]elease/
