--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -29,7 +29,7 @@
     "README.md"
   ],
   "main": "lib/index.js",
-  "version": "9.0.0-alpha",
+  "version": "9.0.0+v9",
   "devDependencies": {
     "@types/assert": "^1.5.6",
     "@types/chai": "^4.3.3",
