chore(package.json): update build script to include running testDev after tsc chore(package.json): update file paths in files array to point to build directory chore(service.ts): change IPluginDefinition enum to PluginDefinitions object chore(colours.ts): change ConsoleColours enum to CONSOLE_COLOURS object
fix(plugin.ts): change import statement for ConsoleColours enum
feat(plugin.ts): add LOG_LEVELS constant and LogLevels type
fix(config.ts): change import statements for PluginDefinitions and PluginDefinition types

refactor(plugins.ts): change interface names to match updated interface names
refactor(serviceBase.ts): change enum to const enum and add type for enum values
refactor(services.ts): change interface names to match updated interface names

fix(plugin.ts): import LOG_LEVELS constant from log-default plugin
fix(plugin.ts): change parameter type from number to LogLevels in fakeLogFunc function

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "dev": "nodemon --config ./nodemon.json",
     "start": "node lib/cli.js",
-    "build": "tsc",
+    "build": "tsc && npm run testDev",
     "postinstall": "node ./postinstall.js",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js -r ts-node/register 'src/tests/**/*.ts' --reporter json --reporter-options output=junit.json",
@@ -93,17 +93,17 @@
     ],
     "files": [
       {
-        "src": "tsconfig.json",
+        "src": "build/tsconfig.json",
         "dst": "tsconfig.json",
         "canOverwrite": true
       },
       {
-        "src": "eslintrc.js",
+        "src": "build/eslintrc.js",
         "dst": ".eslintrc.js",
         "canOverwrite": true
       },
       {
-        "src": "eslintignore",
+        "src": "build/eslintignore",
         "dst": ".eslintignore",
         "canOverwrite": true
       }
