V9 initial code migration
Changed config to be yaml instead of json

Changed config format for simpler configuration

Changed config format for multi-plugin services running concurrently with different names for monilith deployments

Multi-log handler functionality added

Logs can filter between different log plugins - allowing for log/plugin direction logging/stats - eg: logs to graylog but stats to grafana

Added multi-events ability as well - you can route specific plugins/events over specific event plugins

Starting migration away from sec.config.ts definitions for config of plugins

More type-safety built into all elements

callable methods are now a type safe object on the service - and a function to call them that is type linked

events are now in the events object on the BSB service class for a cleaner plugin.

init and run can be sync/async

initial setup of a BSB plugin invoked abstract classes for more type-safety

Split logging/events/plugins/services from SB into extendable classes for unique cases where the standard classes do not work the way you need them too - so you can extend and change what is needed without hacking around the problem

Initial setup speed from from +1s to ~40ms

Included cleanups during the setup to optimize memory usage

config plugins are simplified even more for less data transfer from the config plugin to other services/ or the BSB itself

Plugin search algorithim now uses defined info in config instead of trying to search for plugins - initial setup will require PDK for easier configuration

prepped for zod - config validation

prepped for future expansion with interoperability between languages with zod for input and output data from events.

client setup is minified as well for simpler use

clients get their own logging defition so you can identify what is creating logs

PI data in logs are removed since it is more complex to handle in client code - so rather just control the data coming into logs better

logging is now sy

--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "dev": "nodemon --config ./nodemon.json",
     "start": "node lib/cli.js",
-    "build": "tsc && npm run testDev",
+    "build": "rm -rfv ./lib && tsc && npm run testDev",
+    "build-release": "rm -rfv ./lib && tsc && npm run test && rm -rfv ./lib && tsc --p ./tsconfig-release.json",
     "postinstall": "node ./postinstall.js",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js -r ts-node/register 'src/tests/**/*.ts' --reporter json --reporter-options output=junit.json",
@@ -34,10 +35,11 @@
     "@types/assert": "^1.5.6",
     "@types/chai": "^4.3.3",
     "@types/mocha": "^9.1.1",
-    "@types/node": "^18.7.16",
+    "@types/node": "^18.19.3",
     "@types/yargs": "^17.0.12",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "chai": "^4.3.10",
     "eslint": "^8.20.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
@@ -47,7 +49,8 @@
   },
   "dependencies": {
     "@bettercorp/tools": "^2.0.20220714140658",
-    "yaml": "^2.3.1"
+    "yaml": "^2.3.1",
+    "zod": "^3.21.4"
   },
   "bsb_project": true,
   "bsbInit": {
