--- a/nodejs/tsconfig-release.json
+++ b/nodejs/tsconfig-release.json
@@ -26,7 +26,8 @@
   },
   "linterOptions": {
     "exclude": [
-      "src/plugins/-*/**/*.*"
+      "src/plugins/-*/**/*.*",
+      "src/tests/**/*.*"
     ]
   },
   "compileOnSave": true,
@@ -36,6 +37,8 @@
   "exclude": [
     "node_modules/**",
     "src/plugins/*-test*/**/*.*",
-    "src/plugins/-*/**/*.*"
+    "src/plugins/-*/**/*.*",
+    "src/plugins/service-*/**/*.*",
+    "src/tests/**/*.*"
   ]
 }
