feat(sec-config.yaml): enable service-default0X, service-default1X, service-default2X, and service-default3X plugins feat(base.ts): import BSBServiceConfig from serviceConfig feat(base.ts): change BSBConfigDefinition to BSBConfigType feat(base.ts): add BSBConfigDefinition type alias for BSBServiceConfig<z.AnyZodObject> feat(config.ts): add run() function to BSBConfigRef class feat(events.ts): add run() function to BSBEventsRef class feat(logging.ts): add run() function to BSBLoggingRef class feat(serviceConfig.ts): create BSBServiceConfig abstract class feat(serviceConfig.ts): create BSBServiceConfigRef class refactor(index.ts): update import path for serviceConfig refactor(serviceConfig.ts): move serviceConfig interface to base folder and rename to BSBServiceConfig
chore(interfaces.ts): add ExtendedConfig interface to extend logging, events, and services config interfaces
chore(interfaces.ts): update logging, events, and services config interfaces to include ExtendedConfig
chore(plugin.ts): remove unused run method in Plugin class
chore(plugin.ts): update return value of getConfig method in Plugin class to handle undefined config
chore(plugin.ts): remove unused run method in Plugin class
chore(plugin.ts): remove unused dispose method in Plugin class
chore(plugin.ts): remove unused run method in Plugin class
chore(plugin.ts): remove unused dispose method in Plugin class
chore(plugin.ts): remove unused run method in Plugin class
chore(plugin.ts): remove unused dispose method in Plugin class
chore(plugin.ts): remove unused run method in Plugin class
chore(plugin.ts): remove unused dispose method in Plugin class
chore(plugin.ts): remove unused run method in Plugin class
chore(plugin.ts): remove

fix(config.ts): change variable names from loggerPackage to configPackage and loggerPlugin to configPluginName
feat(config.ts): add support for process.env.BSB_LOGGER_PLUGIN and process.env.BSB_LOGGER_PLUGIN_PACKAGE environment variables
fix(config.ts): update log messages to u

--- a/nodejs/sec-config.yaml
+++ b/nodejs/sec-config.yaml
@@ -8,13 +8,16 @@ default:
   services:
     service-default0X:
       plugin: service-default0
-      enabled: false
+      enabled: true
+      config: 
+        testa: 5
+        testb: 6
     service-default1X:
       plugin: service-default1
-      enabled: false
+      enabled: true
     service-default2X:
       plugin: service-default2
-      enabled: false
+      enabled: true
     service-default3X:
       plugin: service-default3
-      enabled: false
+      enabled: true
