--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,7 +13,7 @@
     "start": "node lib/cli.js",
     "build": "rm -rfv ./lib && tsc && npm run testDev",
     "build-release": "rm -rfv ./lib && tsc && npm run test && rm -rfv ./lib && tsc --p ./tsconfig-release.json",
-    "xpostinstall": "node ./postinstall.js",
+    "xZpostinstall": "node ./postinstall.js",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js -r ts-node/register 'src/tests/**/*.ts' --reporter json --reporter-options output=junit.json",
     "testDev": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha.js -r ts-node/register 'src/tests/**/*.ts'"
@@ -23,6 +23,7 @@
   },
   "files": [
     "lib/**/*",
+    "development/**/*",
     "tsconfig.json",
     "README.md"
   ],
