--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,85 +1,54 @@
-name: Build Framework
+name: Build Plugin
 
 on:
   pull_request:
-  push:
-    branches:
-      - "**"
-      - "!develop"
-      - "!master"
-    tags-ignore:
-      - "**"
+  workflow_dispatch:    
 
 jobs:
-  build-framework-nodejs:
+  build_nodejs_plugin:
+    uses: BetterCorp/service-base-build-workflows/.github/workflows/node.yml@master
+    with:
+      WORKING_DIR: ./nodejs
+      PUBLISH: false
+
+  docker_nodejs_plugin:
+    needs: [build_nodejs_plugin]
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-          cache-dependency-path: nodejs/package-lock.json
-
-      - run: npm i -g typescript ts-node
-        working-directory: ./nodejs
-      - run: tsc -v ; ts-node -v
-        working-directory: ./nodejs
-      - run: npm ci
-        working-directory: ./nodejs
-      - run: npm run build
-        working-directory: ./nodejs
-      - run: npm run test
-        working-directory: ./nodejs
-
-      - name: Test Report ${{ matrix.node-version }}
-        uses: dorny/test-reporter@v1.5.0
-        with:
-          name: Tests
-          path: nodejs/junit.json
-          reporter: mocha-json
-
-      - name: Upload coverage reports to Codecov
-        if: contains(matrix.node-version, '20.x')
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          directory: nodejs/coverage
-
-      - name: cleanup
-        if: always()
-        run: rm -f ~/.npmrc ; rm -f ./.npmrc;
-
-  docs_build_:
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+        uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-          cache-dependency-path: documentation/package-lock.json
-          
-      - run: npm ci
-        working-directory: documentation/
+      - run: ./ci-build-dist
+        working-directory: ./nodejs
 
-      - run: npm run build
-        working-directory: documentation/
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: node-${{ needs.build_nodejs_plugin.outputs.tag }}-${{ needs.build_nodejs_plugin.outputs.version }}
+          path: ./nodejs/ci-build-dist/
+
+      - name: Extract artifact
+        working-directory: ./nodejs
+        run: |
+          tar -xzf ./ci-build-dist/as-built.tar.gz -C ./
+
+      - run: rm -rfv ./ci-build-dist
+        working-directory: ./nodejs
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: all
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          context: ./nodejs/
+          file: ./nodejs/Dockerfile
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
+          push: false
