--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -25,24 +25,25 @@
     "lib/**/*",
     "development/**/*",
     "tsconfig.json",
-    "README.md"
+    "README.md",
+    "LICENSE"
   ],
   "main": "lib/index.js",
   "version": "9.0.4-beta",
   "devDependencies": {
-    "@types/assert": "^1.5.6",
-    "@types/chai": "^4.3.3",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.19.3",
-    "@types/yargs": "^17.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@types/assert": "^1.5.10",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.5",
+    "@types/yargs": "^17.0.32",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "chai": "^4.3.10",
-    "eslint": "^8.20.0",
-    "mocha": "^10.0.0",
+    "eslint": "^8.56.0",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "yargs": "^17.5.1"
   },
   "dependencies": {
