--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -30,27 +30,6 @@
   ],
   "main": "lib/index.js",
   "version": "9.0.4-beta",
-  "devDependencies": {
-    "@types/assert": "^1.5.10",
-    "@types/chai": "^4.3.11",
-    "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.5",
-    "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "chai": "^4.3.10",
-    "eslint": "^8.56.0",
-    "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
-    "yargs": "^17.5.1"
-  },
-  "dependencies": {
-    "@bettercorp/tools": "^2.0.20220714140658",
-    "yaml": "^2.3.1",
-    "zod": "^3.21.4"
-  },
   "bsb_project": true,
   "bsbInit": {
     "project": {
@@ -117,5 +96,26 @@
       "src/shared",
       "src/tests"
     ]
+  },
+  "devDependencies": {
+    "@types/assert": "^1.5.10",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.5",
+    "@types/yargs": "^17.0.32",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "chai": "^4.3.10",
+    "eslint": "^8.56.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@bettercorp/tools": "^3.6.0",
+    "yaml": "^2.3.4",
+    "zod": "^3.22.4",
+    "yargs": "^17.7.2"
   }
 }
