--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -113,9 +113,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@bettercorp/tools": "^3.6.0",
+    "@bettercorp/tools": "^3.7.0",
     "yaml": "^2.3.4",
-    "zod": "^3.22.4",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "zod": "^3.22.4"
   }
 }
