--- a/nodejs/tsconfig-release.json
+++ b/nodejs/tsconfig-release.json
@@ -38,6 +38,7 @@
     "node_modules/**",
     "src/plugins/*-test*/**/*.*",
     "src/plugins/-*/**/*.*",
+    "src/plugins/service-*/**/*.*",
     "src/tests/**/*.*"
   ]
 }
