--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -19,7 +19,7 @@
     "testDev": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha.js -r ts-node/register 'src/tests/**/*.ts'"
   },
   "bin": {
-    "bsb": "lib/bootstrap.js"
+    "bsb": "lib/cli.js"
   },
   "files": [
     "lib/**/*",
