--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,8 +1,24 @@
-FROM node:20-bullseye
-# RUN npm i -g typescript ts-node
+# BSB Build
+FROM betterweb/node:20 as builder
+
+RUN set -eux && mkdir /home/bsb && npm i -g typescript ts-node
+
+WORKDIR /home/bsb
+
+ADD tsconfig-release.json /home/bsb/tsconfig-release.json
+ADD package.json /home/bsb/package.json
+ADD package-lock.json /home/bsb/package-lock.json
+ADD src/ /home/bsb/src/
+RUN npm ci
+RUN npm run build-release
+
+# Final image
+FROM betterweb/node:20
+
+COPY --from=builder /home/bsb/lib /home/bsb/lib
+COPY --from=builder /home/bsb/node_modules /home/bsb/node_modules
 
 VOLUME /mnt/bsb-plugins
-RUN mkdir /home/bsb
 WORKDIR /home/bsb
 
 ENV NODE_ENV production
@@ -10,38 +26,13 @@ ENV BSB_LIVE true
 ENV BSB_CONTAINER true
 ENV BSB_PLUGIN_DIR /mnt/bsb-plugins
 
-# NPM repo defaults
-#RUN pnpm config set auto-install-peers true
-#RUN npm init -y
-#RUN echo '{"deploymentProfiles":{"default":{}},"plugins":{}}' >> ./sec.config.json
-# RUN pushd /mnt/bsb-plugins && npm init -y && pushd
-
-# Add core BSB lib (from local)
 ADD package.json /home/bsb/package.json
 ADD package-lock.json /home/bsb/package-lock.json
 ADD lib/ /home/bsb/lib/
 
-#RUN mkdir /home/bsb-build
-#COPY *.tgz /home/bsb-build/
 COPY entrypoint.sh /root/entrypoint.sh
-#COPY entrypoint.js /root/entrypoint.js
-#RUN chmod 550 /root/entrypoint.sh
 
-# Default plugins/setup
-#RUN ls -la /home/bsb-build/
-#RUN pnpm add "/home/bsb-build/$(ls /home/bsb-build/ | grep .tgz | head -1)"
-# RUN pnpm i --prod --fix-lockfile "/home/bsb-build/$(ls /home/bsb-build/ | grep .tgz | head -1)"
-#RUN node ./node_modules/@bettercorp/service-base/postinstall.js --cwd=$(pwd)
-
-#RUN cat ./package.json
-
-# Cleanup
-#RUN rm -rfv /home/bsb-build
-
-RUN chown -R root:node /home/bsb
-RUN chmod -R 650 /home/bsb
-RUN touch /home/bsb/sec-config.yaml
-RUN chown node:node /home/bsb/sec-config.yaml
+RUN addgroup node dialout && touch /home/bsb/sec-config.yaml && chown -R root:node /home/bsb && chmod -R 650 /home/bsb && chown node:node /home/bsb/sec-config.yaml && chmod +x /root/entrypoint.sh && npm ci
 
 ENTRYPOINT [ "/root/entrypoint.sh" ]
-CMD node node_modules/@bettercorp/service-base/lib/cli.js
+CMD node lib/cli.js
