--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,7 @@ jobs:
 
       - name: Build
         uses: docker/build-push-action@v5
+        if: needs.build_nodejs_plugin_release.outputs.tag != 'latest'
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: ./nodejs/
@@ -75,7 +76,7 @@ jobs:
             betterweb/service-base:node-${{ needs.build_nodejs_plugin_release.outputs.tag }}
             betterweb/service-base:node-${{ needs.build_nodejs_plugin_release.outputs.version }}
 
-      - name: Build
+      - name: Build Latest
         uses: docker/build-push-action@v5
         if: needs.build_nodejs_plugin_release.outputs.tag == 'latest'
         with:
@@ -85,4 +86,6 @@ jobs:
           platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
           push: true
           tags: |
+            betterweb/service-base:node-${{ needs.build_nodejs_plugin_release.outputs.tag }}
+            betterweb/service-base:node-${{ needs.build_nodejs_plugin_release.outputs.version }}
             betterweb/service-base:node
