Updated build scripts for docker

--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -1,6 +1,8 @@
 # BSB Build
 FROM betterweb/node:20 as builder
 
+ARG BSB_VERSION=0.0.0
+
 RUN set -eux && mkdir /home/bsb && npm i -g typescript ts-node
 
 WORKDIR /home/bsb
@@ -9,14 +11,15 @@ ADD tsconfig-release.json /home/bsb/tsconfig-release.json
 ADD package.json /home/bsb/package.json
 ADD package-lock.json /home/bsb/package-lock.json
 ADD src/ /home/bsb/src/
-RUN npm ci
-RUN npm run build-release
+RUN npm ci && npm version $BSB_VERSION --allow-same-version --no-git-tag-version && npm run build-release
 
 # Final image
 FROM betterweb/node:20
 
 COPY --from=builder /home/bsb/lib /home/bsb/lib
 COPY --from=builder /home/bsb/node_modules /home/bsb/node_modules
+COPY --from=builder /home/bsb/package.json /home/bsb/package.json
+COPY --from=builder /home/bsb/package-lock.json /home/bsb/package-lock.json
 
 VOLUME /mnt/bsb-plugins
 WORKDIR /home/bsb
@@ -25,10 +28,6 @@ ENV NODE_ENV production
 ENV BSB_LIVE true
 ENV BSB_CONTAINER true
 ENV BSB_PLUGIN_DIR /mnt/bsb-plugins
-
-ADD package.json /home/bsb/package.json
-ADD package-lock.json /home/bsb/package-lock.json
-ADD lib/ /home/bsb/lib/
 
 COPY entrypoint.sh /root/entrypoint.sh
 
