--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,22 +29,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - run: mkdir ./ci-build-dist
-        working-directory: ./nodejs
+      # - run: mkdir ./ci-build-dist
+      #   working-directory: ./nodejs
 
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: node-${{ needs.build_nodejs_plugin_release.outputs.tag }}-${{ needs.build_nodejs_plugin_release.outputs.version }}
-          path: ./nodejs/ci-build-dist/
+      # - name: Download artifact
+      #   uses: actions/download-artifact@v4
+      #   with:
+      #     name: node-${{ needs.build_nodejs_plugin_release.outputs.tag }}-${{ needs.build_nodejs_plugin_release.outputs.version }}
+      #     path: ./nodejs/ci-build-dist/
 
-      - name: Extract artifact
-        working-directory: ./nodejs
-        run: |
-          tar -xzf ./ci-build-dist/as-built.tar.gz -C ./
+      # - name: Extract artifact
+      #   working-directory: ./nodejs
+      #   run: |
+      #     tar -xzf ./ci-build-dist/as-built.tar.gz -C ./
 
-      - run: rm -rfv ./ci-build-dist
-        working-directory: ./nodejs
+      # - run: rm -rfv ./ci-build-dist
+      #   working-directory: ./nodejs
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@master
@@ -65,6 +65,8 @@ jobs:
         uses: docker/build-push-action@v5
         if: needs.build_nodejs_plugin_release.outputs.tag != 'latest'
         with:
+          build-args: |
+            BSB_VERSION=${{ needs.build_nodejs_plugin_release.outputs.version }}
           builder: ${{ steps.buildx.outputs.name }}
           context: ./nodejs/
           file: ./nodejs/Dockerfile
@@ -80,6 +82,8 @@ jobs:
         uses: docker/build-push-action@v5
         if: needs.build_nodejs_plugin_release.outputs.tag == 'latest'
         with:
+          build-args: |
+            BSB_VERSION=${{ needs.build_nodejs_plugin_release.outputs.version }}
           builder: ${{ steps.buildx.outputs.name }}
           context: ./nodejs/
           file: ./nodejs/Dockerfile
