--- a/nodejs/Dockerfile
+++ b/nodejs/Dockerfile
@@ -30,9 +30,9 @@ ENV BSB_LIVE true
 ENV BSB_CONTAINER true
 ENV BSB_PLUGIN_DIR /mnt/bsb-plugins
 
-COPY entrypoint.sh /root/entrypoint.sh
+COPY entrypoint.sh /home/bsb/entrypoint.s
 
 RUN addgroup node dialout && touch /home/bsb/sec-config.yaml && chown -R root:node /home/bsb && chmod -R 650 /home/bsb && chown node:node /home/bsb/sec-config.yaml && chmod +x /root/entrypoint.sh
 
-ENTRYPOINT [ "/root/entrypoint.sh" ]
-CMD node lib/cli.js
+ENTRYPOINT [ "/home/bsb/entrypoint.sh" ]
+CMD lib/cli.js
