Uhm... lots of fixes and cleanups
More type-safety added

Fixed SB client references

General fixes/updates

other stuff... + cleanups

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ node_modules
 /nodejs/.nyc_output
 /nodejs/lib
 /nodejs/coverage
+/nodejs/development/tsconfig.json
 /dotnet/[Dd]ebug/
 /dotnet/[Dd]ebugPublic/
 /dotnet/[Rr]elease/
