--- a/nodejs/development/tsconfig-release.json
+++ b/nodejs/development/tsconfig-release.json
@@ -25,15 +25,10 @@
     "moduleResolution": "node"
   },
   "linterOptions": {
-    "exclude": [
-      "src/plugins/-*/**/*.*",
-      "src/tests/**/*.*"
-    ]
+    "exclude": ["src/plugins/-*/**/*.*", "src/tests/**/*.*"]
   },
   "compileOnSave": true,
-  "include": [
-    "src"
-  ],
+  "include": ["src"],
   "exclude": [
     "node_modules/**",
     "src/plugins/*-test*/**/*.*",
