--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -12,8 +12,8 @@
     "dev": "nodemon --config ./nodemon.json",
     "start": "node lib/cli.js",
     "build": "rm -rfv ./lib && tsc && npm run testDev",
-    "build-release": "rm -rfv ./lib && tsc --p ./tsconfig-release.json",
-    "xZpostinstall": "node ./postinstall.js",
+    "build-release": "rm -rfv ./lib && tsc --p ./tsconfig-release.json && npm run build-release-tsconfig",
+    "build-release-tsconfig": "rm -fv ./development/tsconfig.json && cp ./tsconfig.json ./development/tsconfig.json",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js -r ts-node/register 'src/tests/**/*.ts' --reporter json --reporter-options output=junit.json",
     "testDev": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha.js -r ts-node/register 'src/tests/**/*.ts'"
@@ -24,7 +24,6 @@
   "files": [
     "lib/**/*",
     "development/**/*",
-    "tsconfig.json",
     "README.md",
     "LICENSE"
   ],
@@ -98,17 +97,21 @@
     ]
   },
   "devDependencies": {
+    "@ts-ast-parser/core": "^0.6.3",
     "@types/assert": "^1.5.10",
     "@types/chai": "^4.3.11",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.10.5",
+    "@types/node": "^20.10.6",
     "@types/yargs": "^17.0.32",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "chai": "^4.3.10",
     "eslint": "^8.56.0",
+    "install": "^0.13.0",
     "mocha": "^10.2.0",
+    "npm": "^10.2.5",
     "nyc": "^15.1.0",
+    "ts-morph": "^21.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
