--- a/nodejs/tsconfig-release.json
+++ b/nodejs/tsconfig-release.json
@@ -4,7 +4,7 @@
     "paths": {
       "*": ["types/*"]
     },
-    "module": "commonjs",
+    "module": "CommonJS",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
@@ -14,15 +14,15 @@
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "target": "es2021",
-    "lib": ["es2021"],
+    "target": "es2022",
+    "lib": ["es2022"],
     "declaration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node"
+    "moduleResolution": "Node"
   },
   "linterOptions": {
     "exclude": [
